=== 0.8.2

* Remove VERSION variable from feedme.rb

=== 0.8.1 / 2010-01-02

* Add new transformation :esc
* Expose parsed tags as attribute :fm_parsed

=== 0.8 / 2009-12-14

* Add new virtual method _values: returns all values for a given tag.
* Transformations with arguments are now specified as an array rather than
  part of the symbol
* Add transform method
* Add regexp transform
* Add nokogiri support (hpricot is still the default)
* Copy/paste and fix feed-normalizer clean_html method, drop feed-normalizer dependency

=== 0.7.1 / 2009-09-24

* Fix nil_or_empty? to strip whitespace from strings

=== 0.7 / 2009-09-24

* Design decision: all element and attribute names will be stored as lower-case. They may still
  be accessed using upper case, since keys will be normalized by all accessors.
* Design decision: RDF will be dealt with at parse time: elements with rdf:resource attributes will be
  replaced by the actual, referenced elements. Ordering of the referring elements will be preserved.
* Removed the concept of ghost tags. 

=== 0.6.5 / 2009-09-24

* Fix :truncHtml completely by requiring active_support.

=== 0.6.4 / 2009-09-23

* Roll version to make github happy.

=== 0.6.3 / 2009-09-23

* Fix truncHtml: use code by Henrik Nyh, which in turn uses Hypricot

=== 0.6.2 / 2009-09-23

* Fix content-parsing regular expression to correctly handle closed elements
* Reverse earlier design decision: keep namespaces for attributes.

=== 0.6.1 / 2009-09-23

* Improve handling of rdf:items. From now on, .items will forward to .item_array. The rdf items can still be accessed by [:items_array] or .items_array.

=== 0.6 / 2009-09-23

* Fix handling of the items element (mostly affects RSS 1.0 documents)
* Make attribute naming consistent
* Design decision: attributes can only ever have a single value, so they will always be stored as scalars
  rather than arrays. This will also nicely resolve any possible collisions between attribute and tag names.
